@@ -1,3 +1,9 @@
+2009-11-04  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/ao_bookmarklist.c:
+   Prevent updating the bookmark list if it is disabled.
+
+
 2009-11-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/addons.c:
